--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-  
+
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-  <div class="contenair">
+  <div class="container">
     <img class="qr-code-image" src="./images/image-qr-code.png" alt="Qr code image">
     <h1 class="title">Improve your front-end skills by building projects</h1> 
     <p class="paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
