--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 </head>
 <body>
 
-  <div class="container">
+  <main class="container">
     <img class="qr-code-image" src="./images/image-qr-code.png" alt="Qr code image">
     <h1 class="title">Improve your front-end skills by building projects</h1> 
     <p class="paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
+  </main>
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/Key-Bro">Key-Bro</a>.
-  </div>
+  </footer>
 </body>
 </html>
